--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,11 +1,11 @@
-<link rel="apple-touch-icon" sizes="180x180" href="{{ '/images/apple-touch-icon.png' | relative_url }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ '/images/apple-touch-icon.png' | relative_url }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ '/images/apple-touch-icon.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ '/images/avatar.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ '/images/avatar.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ '/images/avatar.png' | relative_url }}">
 <link rel="manifest" href="{{ '/images/site.webmanifest' | relative_url }}">
 
 <meta name="msapplication-TileColor" content="#000000">
-<meta name="msapplication-TileImage" content="images/mstile-144x144.png?v=M44lzPylqQ">
-<meta name="msapplication-config" content="images/browserconfig.xml?v=M44lzPylqQ">
+<meta name="msapplication-TileImage" content="{{ '/images/mstile-144x144.png' | relative_url }}">
+<meta name="msapplication-config" content="{{ '/images/browserconfig.xml' | relative_url }}">
 <meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" href="{{ '/assets/css/academicons.css' | relative_url }}"/>
 
